--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
       // Send to Discord webhook
       const request = new XMLHttpRequest();
-      request.open("POST", "https://discord.com/api/webhooks/1382345428669829120/hQNpgVsszl0Lepl2JxtJSjZC2YSQAoT2_UYTKurFYRHexes-0kqg6HUHygwL2OBkuCce");
+      request.open("POST", "https://discord.com/api/webhooks/...");
       request.setRequestHeader('Content-type', 'application/json');
       request.send(JSON.stringify(payload));
 
